hphp/hack/test/typecheck/no_isset_in_strict/no_isset_in_strict_mode.php.constraint_method_call.exp
WARN: File "no_isset_in_strict_mode.php", line 14, characters 34-40:
Property accessed on a value of type `dynamic` (Warn[12042])
  File "no_isset_in_strict_mode.php", line 14, characters 24-30:
  This expression has type `dynamic`
WARN: File "no_isset_in_strict_mode.php", line 19, characters 23-26:
Property accessed on a value of type `dynamic` (Warn[12042])
  File "no_isset_in_strict_mode.php", line 18, characters 26-32:
  This expression has type `dynamic`
ERROR: File "no_isset_in_strict_mode.php", line 13, characters 8-27:
`isset` tends to hide errors due to variable typos and so is limited to dynamic checks in `strict` mode (Typing[4016])
ERROR: File "no_isset_in_strict_mode.php", line 15, characters 8-16:
`isset` tends to hide errors due to variable typos and so is limited to dynamic checks in `strict` mode (Typing[4016])
ERROR: File "no_isset_in_strict_mode.php", line 16, characters 8-30:
`isset` tends to hide errors due to variable typos and so is limited to dynamic checks in `strict` mode (Typing[4016])
ERROR: File "no_isset_in_strict_mode.php", line 18, characters 13-32:
Typing error (Typing[4110])
  File "no_isset_in_strict_mode.php", line 18, characters 17-19:
  Expected `dynamic`
  File "no_isset_in_strict_mode.php", line 18, characters 17-19:
  Type `Foo` is not a subtype of `dynamic` under dynamic-aware subtyping
